Serilog support and logging added.

--- a/RatingService/RatingService.csproj
+++ b/RatingService/RatingService.csproj
@@ -7,4 +7,9 @@
     <LangVersion>12</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
